hw5_lab8/tests/errors/sem_add_boolean.kt
// EXPECT: semantic error — + on Boolean operands
fun main() {
    val r = true + false
}
